<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="35dp"
    android:paddingBottom="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/dialog_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/alert_dialog_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_alert_dialog"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_alert_dialog"
            app:layout_constraintTop_toTopOf="@+id/guideline_top_alert_dialog" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_57_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:gravity="start"
            android:text="@string/info_details"
            android:textColor="@color/white"
            android:textSize="15.2sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_57_alert_dialog"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_alert_dialog"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_alert_dialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button_alert_dialog"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/arial"
            android:padding="7dp"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_alert_dialog"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_alert_dialog"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_alert_dialog"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.81" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>